# pafe.rs

./: .gitignore  Cargo.toml  README.md
pafe-sys/: Cargo.toml
pafe-sys/src/: lib.rs
src/: felica.rs  lib.rs  pasori.rs
