[package]
name = "pafe"
description = "High-level bindings for the libpafe library"
homepage = "https://github.com/mistydemeo/pafe.rs"
repository = "https://github.com/mistydemeo/pafe.rs"
version = "0.1.0"
authors = ["Misty De Meo <mistydemeo@gmail.com>"]
edition = "2018"
categories = ["external-ffi-bindings", "smartcard"]
license = "GPL-2.0-only"

[dependencies.pafe-sys]
path = "pafe-sys"
version = "0.1.0"
